# CrowdTensor

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  compose.yaml  coordinator.py  miner_cli.py  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/: pull_request_template.md  release.yml
crowdtensor/: __init__.py  audit.py  auth.py  cli.py  core_technology_handoff.py  diloco.py  external_llm.py  large_model_inference_rc.py  large_model_shard.py  lora_mock.py  micro_llm_artifact.py  micro_transformer.py  model_bundle.py  operator_invite.py  outer_optimizer.py  p2p_lite.py  protocol.py  real_llm.py  real_p2p.py  session_protocol.py  state_store.py  toy_compute.py  validation.py
docs/: api.md  architecture.md  gpu-sharded-generation-beta.md  operations.md  project-memory.md  protocol.md  quickstart.md  release.md  remote-miner.md  security.md  use-cases.md
scripts/: admin_inference_session_check.py  api_contract_check.py  auth_headers.py  browser_acceptance_pack.py  browser_miner_chaos.py  browser_miner_smoke.py  browser_probe_smoke.py  capability_ledger_check.py  chaos_runner.py  compressed_error_feedback_check.py  core_technology_handoff_check.py  core_technology_handoff_pack.py  cpu_inference_beta_check.py  cpu_inference_beta_pack.py  cpu_inference_beta_rc_check.py  cpu_inference_beta_rc_pack.py  cpu_lora_mock_smoke.py  create_miner_invite.py  create_operator_invite.py  delta_transport_negotiation_check.py  demo_manifest_check.py  demo_manifest_pack.py  (+137 more)
(+97 files in other folders)
