[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crowdtensord"
version = "0.1.0a0"
description = "Experimental fault-tolerant control plane for distributed AI workload miners."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "CrowdTensorD contributors" }
]
keywords = ["distributed-ai", "depin", "diloco", "swarm-training", "fastapi"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: System :: Distributed Computing",
]
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]
browser = [
  "playwright>=1.50,<2",
]
hf = [
  "torch>=2,<3",
  "transformers>=4.40,<5",
  "safetensors>=0.4,<1",
]

[project.scripts]
crowdtensor = "crowdtensor.cli:main"
crowdtensord = "coordinator:main"
crowdtensor-miner = "miner_cli:main"

[tool.setuptools]
py-modules = ["coordinator", "miner_cli"]

[tool.setuptools.packages.find]
include = ["crowdtensor*"]
